test_scores/negative_dimers/features/P36915.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P36915.pkl.xz